@@ -1,8 +1,8 @@
 ---
 sudo::user_specifications:
-  simp_sudosh:
+  simp_su:
     user_list: ['simp']
-    cmnd: ['/usr/bin/sudosh']
+    cmnd: ['/bin/su']
   users_yum_update:
     user_list:
       - '%users'
